[package]
name = "susie"
version = "0.1.0"
authors = ["KloudTrader <info@kloudtrader.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.63.0"
cranelift-module = "0.63.0"
cranelift-simplejit = "0.63.0"
weld = "0.4.0"
